tests/error/find_type.gw
#! [contains] unknown type
class C extends UserUGen {
  var D d;
}
